Temporarily fix spacing of the cuisine buttons

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -219,5 +219,4 @@ hr {
 
 .chat-reply {
   padding: 0 10px;
-  margin: 0 25px;
 }
